some warning is fixed